# dgm

./: .gitignore  CONVERSION_SUMMARY.md  Cargo.toml  README_RUST.md  errors.txt
src/: lib.rs  main.rs
src/agent/: mod.rs
src/config/: mod.rs
src/dgm/: archive.rs  evolution.rs  mod.rs  runner.rs
src/evaluation/: mod.rs
src/llm/: mod.rs
src/prompts/: mod.rs
src/tools/: bash.rs  edit.rs  mod.rs
src/utils/: common.rs  docker.rs  eval.rs  git.rs  mod.rs
tests/: integration_test.rs
