[package]
name = "dgm"
version = "0.1.0"
edition = "2021"
authors = ["DGM Team"]
description = "Darwin Gödel Machine: Open-Ended Evolution of Self-Improving Agents"
license = "Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# HTTP client for API calls
reqwest = { version = "0.11", features = ["json", "stream"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Docker integration
bollard = "0.19.0"

# Git operations
git2 = "0.18"

# File system operations
walkdir = "2.0"
tempfile = "3.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Random number generation
rand = "0.8"

# Configuration
config = "0.13"

# Regex
regex = "1.0"

# Base64 encoding
base64 = "0.21"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Parallel processing
rayon = "1.0"

# Backoff for retries
backoff = { version = "0.4", features = ["tokio"] }

# Environment variables
dotenv = "0.15"

# Async streams
tokio-stream = "0.1"

# Path utilities
pathdiff = "0.2"

# Async trait support
async-trait = "0.1"

# Tar archive handling
tar = "0.4"

[dev-dependencies]
tokio-test = "0.4"
